Renamed the page title

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Windeln</title>
+    <title>Angular</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
