--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -47,9 +47,9 @@
                  class="panel panel-default height600">
                 <input class="form-control" ng-model="searchText" type="text"
                        placeholder="Search..">
-                <ul>
+                <ul class="nav nav-pills nav-stacked">
                     <li ng-repeat="entry in menuEntries | filter:searchText:contains">
-                        <a ui-sref-active="active" ui-sref="{{entry.Link}}">{{entry.Name}}</a></li>
+                        <a class="active" ui-sref-active="active" ui-sref="{{entry.Link}}">{{entry.Name}}</a></li>
                 </ul>
             </div>
         </div>
