--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -49,7 +49,11 @@
                        placeholder="Search..">
                 <ul class="nav nav-pills nav-stacked">
                     <li ng-repeat="entry in menuEntries | filter:searchText:contains">
-                        <a class="active" ui-sref-active="active" ui-sref="{{entry.Link}}">{{entry.Name}}</a></li>
+                        <a class="active" ui-sref-active="active" ui-sref="{{entry.Link}}">{{entry.Name}}</a>
+                        <div ng-if="entry.Line==true">
+                        <hr class="menuLine"/>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
