--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,22 +17,21 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.14.3/ui-bootstrap-tpls.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="app.js"></script>
 
-    <!--
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-grid/3.1.0/ui-grid.js"></script>
-    <link rel="styleSheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-grid/3.1.0/ui-grid.css"/>
-         -->
     <link rel="stylesheet" type="text/css" href="./styles/app.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
 
     <script src="service/SelectDetailService.js"></script>
+    
     <script src="controller/ProductController.js"></script>
     <script src="controller/DetailController.js"></script>
     <script src="controller/MenuController.js"></script>
+    
     <script src="utilFunctions.js"></script>
 
 
@@ -48,8 +47,8 @@
                 <input class="form-control" ng-model="searchText" type="text"
                        placeholder="Search..">
                 <ul class="nav nav-pills nav-stacked">
-                    <li ng-repeat="entry in menuEntries | filter:searchText:contains">
-                        <a class="active" ui-sref-active="active" ui-sref="{{entry.Link}}">{{entry.Name}}</a>
+                    <li ng-repeat="entry in menuEntries | filter:searchText:contains" ui-sref-active ="active">
+                        <a ui-sref="{{entry.Link}}">{{entry.Name}}</a>
                         <div ng-if="entry.Line==true">
                         <hr class="menuLine"/>
                         </div>
